Adding more grammar functionality
* Added more spell description support
* Added spell description variable support
* Added conditional support